--- a/DatabaseCreation.ipynb
+++ b/DatabaseCreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "070dfa19-f555-44de-affc-20cd40ad73ab",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "\n",
     "with open('yelp_academic_dataset_checkin.json', 'r') as f:\n",
     "    checkin = [json.loads(line) for line in f]\n",
-    "checkin_df = pd.DataFrame(chicken_data)\n",
+    "checkin_df = pd.DataFrame(checkin)\n",
     "\n",
     "with open('yelp_academic_dataset_review.json', 'r') as f:\n",
     "    review_data = [json.loads(line) for line in f]\n",
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
