--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating database connection\n",
+    "# creating database connectionn\n",
     "conn = sqlite3.connect('yelp.db')"
    ]
   },
